<resources>
    <string name="app_name">GreenFlag</string>
    <string name="txt_ma_line1">GreenFlag customers can</string>
    <string name="txt_ma_line2">create an account to access</string>
    <string name="txt_ma_list1">Car health updates</string>
    <string name="txt_ma_list2">Request a rescue online</string>
    <string name="txt_ma_list3">Policy information</string>
    <string name="txt_ma_button">Create an account</string>
    <string name="txt_ea_topbar">Create an account</string>
    <string name="txt_ea_email">Email address</string>
    <string name="txt_ea_cpassword">Create password</string>
    <string name="txt_ea_rpassword">Repeat password</string>
    <string name="txt_ea_passrules">Your password should have a minimum of 8 characters and contain at least one number, one uppercase and one lower case letter. You can use special characters</string>
    <string name="txt_ea_button">Next</string>
    <string name="txt_pa_name">Name</string>
    <string name="txt_pa_username">Username</string>
    <string name="txt_pa_pass">Password</string>
    <string name="txt_pa_button1txt">Change Photo</string>
    <string name="txt_pa_age">Age</string>
    <string name="txt_pa_datebtn">Choose Birth Date</string>
    <string name="txt_pa_dateentry">Not Specified</string>
    <string name="txt_pa_radiomale">Male</string>
    <string name="txt_pa_radiofemale">Female</string>
    <string name="txt_pa_radiononbinary">Not Specified</string>
    <string name="txt_pa_postaddress">Postal Address (Opt)</string>
    <string name="txt_pa_button2txt">Save</string>
    <string name="title_activity_recycler_view">recyclerView</string>
    <string name="title_activity_profile_list">ProfileList</string>
    <string name="title_activity_profile_view">ProfileView</string>

</resources>
