<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_dark"
    tools:context=".MainActivity">


    <RelativeLayout
        android:id="@+id/rl_main"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/background_dark"
        android:paddingLeft="30dp"
        android:paddingTop="30dp"
        android:paddingRight="30dp"

        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <ImageView
            android:id="@+id/iv_ma_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="48dp"
            app:srcCompat="@drawable/logo_green_flag" />

        <TextView
            android:id="@+id/tv_ma_line1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/iv_ma_title"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="12dp"
            android:fontFamily="@font/museosans_500"
            android:text="@string/txt_ma_line1"
            android:textColor="#FFF"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tv_ma_line2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_ma_line1"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="12dp"
            android:fontFamily="@font/museosans_500"
            android:text="@string/txt_ma_line2"
            android:textColor="#FFF"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_ma_line2"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_ma_bullet1"
                    android:layout_width="16dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="8dp"
                    android:layout_weight="2"
                    android:maxWidth="16sp"
                    android:maxHeight="16sp"
                    android:scaleType="centerInside"
                    app:srcCompat="@drawable/tick" />

                <TextView
                    android:id="@+id/tv_ma_bullet1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="98"
                    android:fontFamily="@font/museosans_300"
                    android:text="@string/txt_ma_list1"
                    android:textColor="#FFFF"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_ma_bullet2"
                    android:layout_width="16dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="8dp"
                    android:layout_weight="2"
                    android:maxWidth="20sp"
                    android:maxHeight="20sp"
                    android:scaleType="centerInside"
                    app:srcCompat="@drawable/tick" />

                <TextView
                    android:id="@+id/tv_ma_bullet2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    android:layout_weight="98"
                    android:fontFamily="@font/museosans_300"
                    android:text="@string/txt_ma_list2"
                    android:textColor="#FFFF"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_ma_bullet3"
                    android:layout_width="16dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="8dp"
                    android:layout_weight="2"
                    android:maxWidth="20sp"
                    android:maxHeight="20sp"
                    android:scaleType="centerInside"
                    app:srcCompat="@drawable/tick" />

                <TextView
                    android:id="@+id/tv_ma_bullet3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="98"
                    android:fontFamily="@font/museosans_300"
                    android:text="@string/txt_ma_list3"
                    android:textColor="#FFFF"
                    android:textSize="20sp" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btn_ma_create"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="0dp"
            android:background="@drawable/gradient_button_background"
            android:fontFamily="@font/museosans_300"
            android:text="@string/txt_ma_button"
            android:textAllCaps="false"
            android:textColor="#000000"
            android:textSize="24sp" />


    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>